Issues#index:empty - more white space, move Upload option up

--- a/app/assets/stylesheets/snowcrash/modules/issues.scss
+++ b/app/assets/stylesheets/snowcrash/modules/issues.scss
@@ -101,6 +101,17 @@ body.issues.index {
       width: 30.83%;
     }
   }
+
+  .tab-content.outer-tab {
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    border-left: 1px solid #ddd;
+  }
+
+  .tab-pane {
+    padding: 3ex;
+  }
+
   //------------------------------------------------------- /Empty-state styles  
 }
 
